@@ -2,8 +2,8 @@
   "name": "Kalamar",
   "description": "Mojolicious-based Frontend for KorAP",
   "license": "BSD-2-Clause",
-  "version": "0.39.2",
-  "pluginVersion": "0.2.1",
+  "version": "0.39.3",
+  "pluginVersion": "0.2.2",
   "engines": {
     "node": ">=6.0.0"
   },
